@@ -16,6 +16,7 @@ Readonly::Scalar my $PP_ROOT_KEY               => q[pp_root];
 Readonly::Scalar my $PP_ARCHIVAL_FLAG_KEY      => q[pp_archival_flag];
 Readonly::Scalar my $PP_STAGING_ROOT_KEY       => q[pp_staging_root];
 Readonly::Scalar my $PP_INPUT_GLOB_KEY         => q[pp_input_glob];
+Readonly::Scalar my $QC_SUMMARY_KEY            => q[pp_qc_summary];
 Readonly::Scalar my $JOB_NAME_SUBSTR_LENGTH    => 5;
 
 our $VERSION = '0';
@@ -297,6 +298,21 @@ sub pp_input_glob {
   my ($self, $pp_conf) = @_;
   $pp_conf or croak 'pp config should be defined';
   return  $pp_conf->{$PP_INPUT_GLOB_KEY};
+}
+
+=head2 pp_qc_summary
+
+Returns pp_qc_summary value if it is set, undefined
+value if it is not set. Can be used as a class method.
+
+  my $staging_root = $obj->qc_input_glob($pp_conf);
+
+=cut
+
+sub pp_qc_summary {
+  my ($self, $pp_conf) = @_;
+  $pp_conf or croak 'pp config should be defined';
+  return  $pp_conf->{$QC_SUMMARY_KEY};
 }
 
 =head2 canonical_name
